feat - solution 2 - fully functional, used apache spark